# SETR_Proj2

./: Doxyfile  README.md
docs/html/: AllTests_8c.html  AllTests_8c.js  CException_8h.html  CException_8h.js  CException_8h_source.html  CMakeCCompilerId_8c.html  CODE__OF__CONDUCT_8md.html  CONTRIBUTING_8md.html  Defs_8h.html  Defs_8h.js  Defs_8h_source.html  MesonGeneratorRunner_8md.html  README_8md.html  ThrowTheSwitchCodingStandard_8md.html  UnityAssertionsReference_8md.html  UnityChangeLog_8md.html  UnityConfigurationGuide_8md.html  UnityGettingStartedGuide_8md.html  UnityHelperScriptsGuide_8md.html  UnityHelper_8c.html  UnityHelper_8c.js  UnityHelper_8h.html  UnityHelper_8h.js  UnityHelper_8h_source.html  UnityKnownIssues_8md.html  all__tests_8c.html  all__tests_8c.js  annotated.html  annotated_dup.js  bdd_2readme_8md.html  classes.html  cmdproc_8c.html  cmdproc_8c.js  cmdproc_8h.html  cmdproc_8h.js  cmdproc_8h_source.html  cmock_8h.html  cmock_8h.js  cmock_8h_source.html  dir_0691bf07ac75e772c98e7dc73d54bf4d.html  (+364 more)
docs/latex/: AllTests_8c.tex  CException_8h.tex  CException_8h_source.tex  CMakeCCompilerId_8c.tex  CODE__OF__CONDUCT_8md.tex  CONTRIBUTING_8md.tex  Defs_8h.tex  Defs_8h_source.tex  MesonGeneratorRunner_8md.tex  README_8md.tex  ThrowTheSwitchCodingStandard_8md.tex  UnityAssertionsReference_8md.tex  UnityChangeLog_8md.tex  (+180 more)
sampleCode/: cmdproc.c  main  main.c  test_cmdProcessor  test_cmdProcessor.c
src/: CMakeLists.txt  cmdproc.c  main  main.c  test  test_cmdProcessor  test_cmdProcessor.c  tests.c
src/modules/: CMakeLists.txt  cmdproc.c  cmdproc.h
(+91 files in other folders)
